{
  "version": 4,
  "terraform_version": "1.0.1",
  "serial": 351,
  "lineage": "139a6e32-1193-5484-4766-f88c63d0a3fc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.2.50",
            "association_id": "eipassoc-0911e845d382b0a22",
            "domain": "vpc",
            "id": "eipalloc-0f2d9dc7204a6c22e",
            "network_border_group": "me-south-1",
            "network_interface": "eni-085342814e77d6f8d",
            "private_dns": "ip-10-0-2-50.me-south-1.compute.internal",
            "private_ip": "10.0.2.50",
            "public_dns": "ec2-15-185-171-42.me-south-1.compute.amazonaws.com",
            "public_ip": "15.185.171.42",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_network_interface.web-server-nic",
            "aws_security_group.web-node",
            "aws_subnet.subnet-1",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "GridSingularity",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00a33a0976ef4d65f",
            "arn": "arn:aws:ec2:me-south-1:523827381277:instance/i-0ca19e1819b0f60fb",
            "associate_public_ip_address": true,
            "availability_zone": "me-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ca19e1819b0f60fb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-test",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-085342814e77d6f8d"
              }
            ],
            "primary_network_interface_id": "eni-085342814e77d6f8d",
            "private_dns": "ip-10-0-2-50.me-south-1.compute.internal",
            "private_ip": "10.0.2.50",
            "public_ip": "15.185.171.42",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04faae42809475434",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0702bc1270ecdca34",
            "tags": {
              "Name": "GridSingularity"
            },
            "tags_all": {
              "Name": "GridSingularity"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-042b641dd38cf97bd"
            ]
          },
          "dependencies": [
            "aws_network_interface.web-server-nic",
            "aws_security_group.web-node",
            "aws_subnet.subnet-1",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:me-south-1:523827381277:internet-gateway/igw-01a5b7aaf1a2fe5c5",
            "id": "igw-01a5b7aaf1a2fe5c5",
            "owner_id": "523827381277",
            "vpc_id": "vpc-0132f66c2344236a9"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "web-server-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-085342814e77d6f8d",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "06:9a:e6:1e:79:34",
            "private_ip": "10.0.2.50",
            "private_ips": [
              "10.0.2.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-042b641dd38cf97bd"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0702bc1270ecdca34"
          },
          "dependencies": [
            "aws_security_group.web-node",
            "aws_subnet.subnet-1",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:me-south-1:523827381277:route-table/rtb-0984fe094df169a3a",
            "id": "rtb-0984fe094df169a3a",
            "owner_id": "523827381277",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01a5b7aaf1a2fe5c5",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01a5b7aaf1a2fe5c5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Prod"
            },
            "tags_all": {
              "Name": "Prod"
            },
            "vpc_id": "vpc-0132f66c2344236a9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e6bdbec0ba6a23f4",
            "route_table_id": "rtb-0984fe094df169a3a",
            "subnet_id": "subnet-0702bc1270ecdca34"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.prod-route-table",
            "aws_subnet.subnet-1",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:me-south-1:523827381277:security-group/sg-042b641dd38cf97bd",
            "description": "Web Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-042b641dd38cf97bd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-node",
            "name_prefix": "",
            "owner_id": "523827381277",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0132f66c2344236a9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:me-south-1:523827381277:subnet/subnet-0702bc1270ecdca34",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "me-south-1a",
            "availability_zone_id": "mes1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0702bc1270ecdca34",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "523827381277",
            "tags": {
              "Name": "prod-subnet"
            },
            "tags_all": {
              "Name": "prod-subnet"
            },
            "vpc_id": "vpc-0132f66c2344236a9"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prod-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:me-south-1:523827381277:vpc/vpc-0132f66c2344236a9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04d046b17f71ae2f5",
            "default_route_table_id": "rtb-051d8bc247c4e7688",
            "default_security_group_id": "sg-0d6c4d41649aa8551",
            "dhcp_options_id": "dopt-bd5ab0d4",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0132f66c2344236a9",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-051d8bc247c4e7688",
            "owner_id": "523827381277",
            "tags": {
              "Name": "production"
            },
            "tags_all": {
              "Name": "production"
            }
          }
        }
      ]
    }
  ]
}